fix caption header text line height issue on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,7 +316,6 @@ p {
 }
 .caption-text {
   font-size: 22px;
-  line-height: 0.2;
   letter-spacing: 0.001em;
   font-weight: 500;
   font-family: serif;
